traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:14: error: ';' expected but 'else' found.
    else setPos(x + 1, y - 1)
    ^TraversalDiagonal:28: error: Missing closing brace `}' assumed here
} 
^